fixes alignment in featured image content, fixes footer spacing, styles community page, styles get involved

--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ a.navbar-brand {padding-right: 1em;}
 
 /* ========== SUBMIT BUTTON ========== */
 .round-btn-parent { position:relative; }
-.round-btn:hover { color:#e6e6e6; }
+.round-btn:hover { color:#e6e6e6; box-shadow: none;}
 .round-btn {
   width:10em;
   height:10em;
@@ -109,8 +109,8 @@ a.navbar-brand {padding-right: 1em;}
   font-weight:normal;
   position:absolute;
   left:2em;
-  top:-3em;
-  box-shadow: 0 0 3px gray;
+  top:0em;
+  box-shadow: 0 0 3px #666;
 }
 .login-cont {
   text-align: center;
@@ -132,7 +132,7 @@ a.navbar-brand {padding-right: 1em;}
   background-color: #f06798;
   color:white;
   margin-top: 1.2em;
-  box-shadow: 0 0 3px gray;
+  box-shadow: 0 0 3px #666;
 }
 .navbar-btn.pill-btn:hover, .pill-btn:hover {
   background-color: #f06798;
@@ -155,33 +155,34 @@ a.navbar-brand {padding-right: 1em;}
   background-size: cover;
   padding: 100px 0;
   margin-bottom: 2.5em;
-  min-height: 30em;
-  opacity: .9;
+  min-height: 25em;
+  opacity: 1;
 
 }
 .text-wrapper { 
   position: absolute;  
-  top: 10em;
+  top: 5em;
   margin-right: 10%;
 }
 .title { 
   color:white;
-  text-shadow:3px 3px 3px #222;
+  text-shadow:2px 2px 2px #444;
   padding:0;
-  width: ;
+
 }
 .title h1 { font-size: 1.8em; color:white;}
 .subtitle { font-size: 1.2em; }
 
 
 /* ========== SUBMIT BUTTON ========== */
+.featured {text-align: center;}
 .featured h2 {font-weight: 700; font-size: 2em; color:#c1d831;}
 .featured h4 {
   font-weight: 100; 
   font-size: 2em; 
   padding-bottom: .5em;
   }
-  
+
 .feature-callout, .feature-description { text-align: center; }
 .feature-description { padding-bottom: 2em;}
 
@@ -205,8 +206,7 @@ a.navbar-brand {padding-right: 1em;}
 
 /* ========== MAP  ========== */
 #festival-map-img {
-  margin-right: auto;
-  margin-left: auto;
+  margin: 2em auto;
   border:1px solid #ccc;
   width:100%;
   box-shadow: 0 0 3px gray;
@@ -398,7 +398,7 @@ Phones (<768px)
   .description-container { margin-top:0; }
   .section-title { padding-top: 1em; }
   .image-description { padding-right: .5em; padding-left: .5em;}
-  .text-wrapper { top:8em;}
+  .text-wrapper { top:3em;}
 
 }
 
@@ -406,7 +406,7 @@ Phones (<768px)
   .navbar-brand {padding-top:.2em;}
   .image-description {position: static;}
   .text-wrapper { 
-    top:4em; 
+    top:0em; 
     padding-left: 5%;
     padding-right: 5%;
     margin-right: 0;
@@ -420,6 +420,7 @@ Phones (<768px)
     margin-bottom: 2em;
     margin-right: auto;
     margin-left: auto;
+    padding-bottom: 2em;
   }
   .navbar-nav { margin:0; }
   .navbar-btn   {
